--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@
   --color-accent: #7C3AED;
 
   --shadow-button: 0 1px 2px 0 rgb(0 0 0 / 0.3), 0 1px 3px 1px rgb(0 0 0 / 0.15);
+
+  --breakpoint-md: 37.5rem; /* 600px */
+  --breakpoint-lg: 52.5rem; /* 840px */
+  --breakpoint-xl: 75rem; /* 1200px */
 }
 
 body {
